--- a/style.css
+++ b/style.css
@@ -69,8 +69,10 @@ h2 {
     color: #0984e3;
 }
 
+/* Project list styling */
 .project-list {
-    margin-top: 15px;
+    list-style: none;
+    padding: 0;
 }
 
 .project-item {
@@ -92,22 +94,14 @@ h2 {
     color: #2d3436;
 }
 
-.project-item p {
-    margin-bottom: 10px;
-    color: #636e72;
-}
-
-/* Button style */
-.project-btn {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #0984e3;
-    color: white;
+.project-item a {
+    color: #0984e3;
     text-decoration: none;
-    border-radius: 5px;
-    transition: background 0.3s;
+    font-weight: bold;
+    margin-right: 10px;
+    transition: color 0.3s;
 }
 
-.project-btn:hover {
-    background-color: #74b9ff;
+.project-item a:hover {
+    color: #6c5ce7;
 }
