--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h1 {
 }
 
 .scroll-list::-webkit-scrollbar {
-    width: 8px;
+    width: 4px;
 }
 
 .scroll-list::-webkit-scrollbar-thumb {
@@ -118,9 +118,9 @@ h1 {
 }
 
 .wokwi-btn {
-    background-color: #0984e3;
+    background-color: #333;
 }
 
 .wokwi-btn:hover {
-    background-color: #74b9ff;
+    background-color: #555;
 }
