--- a/style.css
+++ b/style.css
@@ -88,7 +88,9 @@ h1 {
 }
 
 .project-title {
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: monospace;
     color: #2d3436;
     flex: 1;
 }
