--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 /* Background and layout */
 body {
-    background: linear-gradient(to right, #74b9ff, #81ecec);
+    background: linear-gradient(to right, #6A9C89, #C4DAD2);
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -67,7 +67,7 @@ h1 {
 }
 
 .scroll-list::-webkit-scrollbar-thumb {
-    background-color: #74b9ff;
+    background-color: #6A9C89;
     border-radius: 10px;
 }
 
@@ -76,7 +76,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #f1f2f6;
+    background-color: #C4DAD2;
     border-radius: 8px;
     padding: 10px;
     margin-bottom: 10px;
@@ -84,7 +84,7 @@ h1 {
 }
 
 .project-item:hover {
-    background-color: #dfe6e9;
+    background-color: #abc4bb;
 }
 
 .project-title {
@@ -124,5 +124,5 @@ h1 {
 }
 
 .wokwi-btn:hover {
-    background-color: #555;
+    background-color: #4a96e2;
 }
